# ai-agentic-hub

./: .gitignore  README.md  pyproject.toml
backend/: database.py  main.py  models.py
backend/api/: agent_routes.py  llm_routes.py  mcp_routes.py  workflow_routes.py
backend/services/: agent_service.py  llm_service.py  mcp_service.py  workflow_service.py
examples/: test_mcp_server.py
frontend/templates/: agents.html  base.html  chat.html  home.html  llm_servers.html  mcp_servers.html  workflow_editor.html  workflows.html
