[project]
name = "ai-agentic-hub"
version = "0.1.0"
description = "A web GUI to visually build AI agents and workflows using local LLMs and MCP tool servers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "hasanjawad001", email = "hasanjawad001@gmail.com" },
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "jinja2",
    "ollama",
    "openai",
    "httpx",
    "python-multipart",
]

[project.scripts]
ai-agentic-hub = "backend.main:run"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
